added more translation

--- a/contribution/lang/ar.json
+++ b/contribution/lang/ar.json
@@ -2329,10 +2329,6 @@
  	 	 	"trans": "الى الخلف",
  	 	 	"eng": "back"
  	 	},
- 	 	"escape": {
- 	 	 	"trans": "هرب",
- 	 	 	"eng": "escape"
- 	 	},
  	 	"shield": {
  	 	 	"trans": "درع",
  	 	 	"eng": "Shield"
@@ -2340,6 +2336,10 @@
  	 	"health": {
  	 	 	"trans": "الصحة",
  	 	 	"eng": "Health"
+ 	 	},
+ 	 	"escape": {
+ 	 	 	"trans": "هرب",
+ 	 	 	"eng": "escape"
  	 	},
  	 	"confirm": {
  	 	 	"trans": "يتأكد",
@@ -2397,10 +2397,6 @@
  	 	 	"trans": "مرتبة",
  	 	 	"eng": "Rank"
  	 	},
- 	 	"statusEffect": {
- 	 	 	"trans": "آثار الحالة",
- 	 	 	"eng": "Status Effects"
- 	 	},
  	 	"quickSlot": {
  	 	 	"trans": "فتحة سريعة",
  	 	 	"eng": "Quick Slot"
@@ -2447,7 +2443,7 @@
  	 	},
  	 	"close": {
  	 	 	"trans": "أغلق",
- 	 	 	"eng": "close"
+ 	 	 	"eng": "Close"
  	 	},
  	 	"characterNameError": {
  	 	 	"invalidChar": {
@@ -2500,6 +2496,14 @@
  	 	 	"cancel": {
  	 	 	 	"trans": "نعم",
  	 	 	 	"eng": "ok"
+ 	 	 	}
+ 	 	}
+ 	},
+ 	"battleUI": {
+ 	 	"quickSlotModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "حدد عنصرًا لربط فتحة سريعة",
+ 	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
  	},
@@ -5862,9 +5866,23 @@
  	 	 	"trans": "تحميل المحصنة ...",
  	 	 	"eng": "Loading Dungeon..."
  	 	},
- 	 	"sendInvite": {
- 	 	 	"trans": "إرسال دعوة إلى الدردشة",
- 	 	 	"eng": "Send Invite To Chat"
+ 	 	"shareDungeonModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "شارك الزنزانة للدردشة؟",
+ 	 	 	 	"eng": "Share Dungeon to chat?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "يمكنك مشاركة زنزانةك الحالية للدردشة.",
+ 	 	 	 	"eng": "You can share your current dungeon to chat."
+ 	 	 	},
+ 	 	 	"cancel": {
+ 	 	 	 	"trans": "يلغي",
+ 	 	 	 	"eng": "Cancel"
+ 	 	 	},
+ 	 	 	"confirm": {
+ 	 	 	 	"trans": "شارك الآن",
+ 	 	 	 	"eng": "Share Now"
+ 	 	 	}
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "هل تعتقد أنك قوي بما فيه الكفاية؟ تأخذ أعداء أقوى في زنزانة! \r\n                         تذكر شراء بعض البند الشفاء! لن ترغب بعد المعركة في زنزانة",
