--- a/contribution/lang/es.json
+++ b/contribution/lang/es.json
@@ -2329,10 +2329,6 @@
  	 	 	"trans": "Volver",
  	 	 	"eng": "back"
  	 	},
- 	 	"escape": {
- 	 	 	"trans": "Escapar",
- 	 	 	"eng": "escape"
- 	 	},
  	 	"shield": {
  	 	 	"trans": "Escudo",
  	 	 	"eng": "Shield"
@@ -2340,6 +2336,10 @@
  	 	"health": {
  	 	 	"trans": "Vida",
  	 	 	"eng": "Health"
+ 	 	},
+ 	 	"escape": {
+ 	 	 	"trans": "Escapar",
+ 	 	 	"eng": "escape"
  	 	},
  	 	"confirm": {
  	 	 	"trans": "Confirmar",
@@ -2397,10 +2397,6 @@
  	 	 	"trans": "Rango",
  	 	 	"eng": "Rank"
  	 	},
- 	 	"statusEffect": {
- 	 	 	"trans": "Efectos del Estado",
- 	 	 	"eng": "Status Effects"
- 	 	},
  	 	"quickSlot": {
  	 	 	"trans": "Ranura Rápida",
  	 	 	"eng": "Quick Slot"
@@ -2447,7 +2443,7 @@
  	 	},
  	 	"close": {
  	 	 	"trans": "Cerrar",
- 	 	 	"eng": "close"
+ 	 	 	"eng": "Close"
  	 	},
  	 	"characterNameError": {
  	 	 	"invalidChar": {
@@ -2500,6 +2496,14 @@
  	 	 	"cancel": {
  	 	 	 	"trans": "OK",
  	 	 	 	"eng": "ok"
+ 	 	 	}
+ 	 	}
+ 	},
+ 	"battleUI": {
+ 	 	"quickSlotModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Seleccione un elemento para vincular a la ranura rápida",
+ 	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
  	},
@@ -5862,9 +5866,23 @@
  	 	 	"trans": "Cargando Mazmorra...",
  	 	 	"eng": "Loading Dungeon..."
  	 	},
- 	 	"sendInvite": {
- 	 	 	"trans": "Enviar una invitación al Chat ✉",
- 	 	 	"eng": "Send Invite To Chat"
+ 	 	"shareDungeonModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "¿Comparte mazmorras para chatear?",
+ 	 	 	 	"eng": "Share Dungeon to chat?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Puedes compartir tu mazmorra actual para chatear.",
+ 	 	 	 	"eng": "You can share your current dungeon to chat."
+ 	 	 	},
+ 	 	 	"cancel": {
+ 	 	 	 	"trans": "Cancelar",
+ 	 	 	 	"eng": "Cancel"
+ 	 	 	},
+ 	 	 	"confirm": {
+ 	 	 	 	"trans": "Comparte ahora",
+ 	 	 	 	"eng": "Share Now"
+ 	 	 	}
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "¿Crees que eres lo suficientemente fuerte? ¡Desafía a los enemigos más fuertes en la Mazmorra! \r\n                         ¡Recuerda comprar algunos objetos curativos! No recuperarás HP después de una pelea en la Mazmorra",
