--- a/contribution/lang/pt.json
+++ b/contribution/lang/pt.json
@@ -2329,10 +2329,6 @@
  	 	 	"trans": "Voltar",
  	 	 	"eng": "back"
  	 	},
- 	 	"escape": {
- 	 	 	"trans": "fugir",
- 	 	 	"eng": "escape"
- 	 	},
  	 	"shield": {
  	 	 	"trans": "Escudo",
  	 	 	"eng": "Shield"
@@ -2340,6 +2336,10 @@
  	 	"health": {
  	 	 	"trans": "Vida",
  	 	 	"eng": "Health"
+ 	 	},
+ 	 	"escape": {
+ 	 	 	"trans": "fugir",
+ 	 	 	"eng": "escape"
  	 	},
  	 	"confirm": {
  	 	 	"trans": "Confirmar",
@@ -2397,10 +2397,6 @@
  	 	 	"trans": "Classificação",
  	 	 	"eng": "Rank"
  	 	},
- 	 	"statusEffect": {
- 	 	 	"trans": "Efeitos de status",
- 	 	 	"eng": "Status Effects"
- 	 	},
  	 	"quickSlot": {
  	 	 	"trans": "Slot rápido",
  	 	 	"eng": "Quick Slot"
@@ -2447,7 +2443,7 @@
  	 	},
  	 	"close": {
  	 	 	"trans": "Fechar",
- 	 	 	"eng": "close"
+ 	 	 	"eng": "Close"
  	 	},
  	 	"characterNameError": {
  	 	 	"invalidChar": {
@@ -2500,6 +2496,14 @@
  	 	 	"cancel": {
  	 	 	 	"trans": "Ok",
  	 	 	 	"eng": "ok"
+ 	 	 	}
+ 	 	}
+ 	},
+ 	"battleUI": {
+ 	 	"quickSlotModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Selecione um item para vincular ao slot rápido",
+ 	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
  	},
@@ -6075,9 +6079,23 @@
  	 	 	"trans": "Carregando masmorra ...",
  	 	 	"eng": "Loading Dungeon..."
  	 	},
- 	 	"sendInvite": {
- 	 	 	"trans": "Enviar convite para conversar",
- 	 	 	"eng": "Send Invite To Chat"
+ 	 	"shareDungeonModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Compartilhar masmorra para conversar?",
+ 	 	 	 	"eng": "Share Dungeon to chat?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Você pode compartilhar sua masmorra atual para conversar.",
+ 	 	 	 	"eng": "You can share your current dungeon to chat."
+ 	 	 	},
+ 	 	 	"cancel": {
+ 	 	 	 	"trans": "Cancelar",
+ 	 	 	 	"eng": "Cancel"
+ 	 	 	},
+ 	 	 	"confirm": {
+ 	 	 	 	"trans": "Compartilhe agora",
+ 	 	 	 	"eng": "Share Now"
+ 	 	 	}
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Você acha que é forte o suficiente? Assuma inimigos mais fortes na masmorra!\r\n                         Lembre-se de comprar algum item de cura! Você não vai se curar após as batalha na masmorra",
