--- a/contribution/lang/th.json
+++ b/contribution/lang/th.json
@@ -2329,10 +2329,6 @@
  	 	 	"trans": "กลับ",
  	 	 	"eng": "back"
  	 	},
- 	 	"escape": {
- 	 	 	"trans": "หลบหนี",
- 	 	 	"eng": "escape"
- 	 	},
  	 	"shield": {
  	 	 	"trans": "โล่",
  	 	 	"eng": "Shield"
@@ -2340,6 +2336,10 @@
  	 	"health": {
  	 	 	"trans": "พลังชีวิต",
  	 	 	"eng": "Health"
+ 	 	},
+ 	 	"escape": {
+ 	 	 	"trans": "หลบหนี",
+ 	 	 	"eng": "escape"
  	 	},
  	 	"confirm": {
  	 	 	"trans": "ยืนยัน",
@@ -2397,10 +2397,6 @@
  	 	 	"trans": "ติดอันดับ",
  	 	 	"eng": "Rank"
  	 	},
- 	 	"statusEffect": {
- 	 	 	"trans": "สถานะ",
- 	 	 	"eng": "Status Effects"
- 	 	},
  	 	"quickSlot": {
  	 	 	"trans": "ชอร์ตคัต",
  	 	 	"eng": "Quick Slot"
@@ -2447,7 +2443,7 @@
  	 	},
  	 	"close": {
  	 	 	"trans": "ปิด",
- 	 	 	"eng": "close"
+ 	 	 	"eng": "Close"
  	 	},
  	 	"characterNameError": {
  	 	 	"invalidChar": {
@@ -2500,6 +2496,14 @@
  	 	 	"cancel": {
  	 	 	 	"trans": "ตกลง",
  	 	 	 	"eng": "ok"
+ 	 	 	}
+ 	 	}
+ 	},
+ 	"battleUI": {
+ 	 	"quickSlotModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "เลือกรายการเพื่อผูกกับสล็อตด่วน",
+ 	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
  	},
@@ -5862,9 +5866,23 @@
  	 	 	"trans": "กำลังโหลดดันเจี้ยน ...",
  	 	 	"eng": "Loading Dungeon..."
  	 	},
- 	 	"sendInvite": {
- 	 	 	"trans": "ส่งคำเชิญไปที่แชท",
- 	 	 	"eng": "Send Invite To Chat"
+ 	 	"shareDungeonModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "แบ่งปันดันเจี้ยนเพื่อแชท?",
+ 	 	 	 	"eng": "Share Dungeon to chat?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "คุณสามารถแบ่งปันดันเจี้ยนปัจจุบันของคุณเพื่อแชท",
+ 	 	 	 	"eng": "You can share your current dungeon to chat."
+ 	 	 	},
+ 	 	 	"cancel": {
+ 	 	 	 	"trans": "ยกเลิก",
+ 	 	 	 	"eng": "Cancel"
+ 	 	 	},
+ 	 	 	"confirm": {
+ 	 	 	 	"trans": "แบ่งปันตอนนี้",
+ 	 	 	 	"eng": "Share Now"
+ 	 	 	}
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "คุณคิดว่าคุณแข็งแกร่งพอหรือไม่? ใช้ศัตรูที่แข็งแกร่งในคุกใต้ดิน! \r\n                         อย่าลืมซื้อไอเท็มการรักษา! คุณจะไม่ฟื้นหลังจากการต่อสู้ในดันเจี้ยน",
