--- a/contribution/lang/tr.json
+++ b/contribution/lang/tr.json
@@ -2329,10 +2329,6 @@
  	 	 	"trans": "Geri",
  	 	 	"eng": "back"
  	 	},
- 	 	"escape": {
- 	 	 	"trans": "Kaçma",
- 	 	 	"eng": "escape"
- 	 	},
  	 	"shield": {
  	 	 	"trans": "KALKAN",
  	 	 	"eng": "Shield"
@@ -2340,6 +2336,10 @@
  	 	"health": {
  	 	 	"trans": "SAĞLIK",
  	 	 	"eng": "Health"
+ 	 	},
+ 	 	"escape": {
+ 	 	 	"trans": "Kaçma",
+ 	 	 	"eng": "escape"
  	 	},
  	 	"confirm": {
  	 	 	"trans": "Onayla",
@@ -2397,10 +2397,6 @@
  	 	 	"trans": "Rütbe",
  	 	 	"eng": "Rank"
  	 	},
- 	 	"statusEffect": {
- 	 	 	"trans": "Statü Etkileri",
- 	 	 	"eng": "Status Effects"
- 	 	},
  	 	"quickSlot": {
  	 	 	"trans": "Hızlı yuva",
  	 	 	"eng": "Quick Slot"
@@ -2447,7 +2443,7 @@
  	 	},
  	 	"close": {
  	 	 	"trans": "Kapat",
- 	 	 	"eng": "close"
+ 	 	 	"eng": "Close"
  	 	},
  	 	"characterNameError": {
  	 	 	"invalidChar": {
@@ -2500,6 +2496,14 @@
  	 	 	"cancel": {
  	 	 	 	"trans": "Tamam",
  	 	 	 	"eng": "ok"
+ 	 	 	}
+ 	 	}
+ 	},
+ 	"battleUI": {
+ 	 	"quickSlotModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Hızlı yuvaya bağlanacak bir öğe seçin",
+ 	 	 	 	"eng": "Select an item to bind to quick slot"
  	 	 	}
  	 	}
  	},
@@ -5862,9 +5866,23 @@
  	 	 	"trans": "Zindan Yükleniyor ...",
  	 	 	"eng": "Loading Dungeon..."
  	 	},
- 	 	"sendInvite": {
- 	 	 	"trans": "Sohbete Davet Gönder",
- 	 	 	"eng": "Send Invite To Chat"
+ 	 	"shareDungeonModal": {
+ 	 	 	"title": {
+ 	 	 	 	"trans": "Dungeon'u sohbet etmek için paylaşın mı?",
+ 	 	 	 	"eng": "Share Dungeon to chat?"
+ 	 	 	},
+ 	 	 	"description": {
+ 	 	 	 	"trans": "Mevcut zindanınızı sohbet etmek için paylaşabilirsiniz.",
+ 	 	 	 	"eng": "You can share your current dungeon to chat."
+ 	 	 	},
+ 	 	 	"cancel": {
+ 	 	 	 	"trans": "İptal etmek",
+ 	 	 	 	"eng": "Cancel"
+ 	 	 	},
+ 	 	 	"confirm": {
+ 	 	 	 	"trans": "Şimdi paylaş",
+ 	 	 	 	"eng": "Share Now"
+ 	 	 	}
  	 	},
  	 	"buttonTut": {
  	 	 	"trans": "Yeterince güçlü olduğunu düşünüyor musun? Zindanda daha güçlü düşmanlarla karşılaşın! \r\n                         Birkaç iyileştirme eşyası satın almayı unutmayın! Zindanda savaştan sonra canınız yenilenmeyecek",
